# usb-notify

./: CMakeLists.txt  Makefile  README.md  usb-notify.c  usb-notify.h
include/: usb-notify.h
src/: usb-notify.c
